internal/lang/testdata/conformance/reject/store_persist_bad_scope.gwdk
// expect: page_store_persist_scope_invalid
package pages

import ui "github.com/cssbruno/gowdk/testfixture/islands"

route "/shop"
guard public

store cart ui.CounterState = ui.NewCounterState() persist "disk"

view {
  <main>Shop</main>
}
